2007-09-05 Kazuhiko
* Remove packing_list.edit() from Delivery_confirm because expansion will be invoked from interaction workflow.

2007-08-13 Jerome
* Remove portal type actions that are now defined as global actions

2007-08-02 Romain
* Add InventoryConstraint

207-07-30 yo
* Add Resource_getPriceCalculationOperandDict.

2006-09-12 Romain
* Fix ReturnedSalePackingListModule_viewReturnedSalePackingListList
* Fix group's name.

2006-08-02 Romain
* Added title to some forms.

2006-07-03 Kevin
* Merge Seb's delivery_patch business template and erp5_trade.
* Revert previous action.
* Add a short basic description.

2006-05-11 Alex
* make sure the Container is indexed before checking if the delivery is packed.
* fixed name of rule used in order_interaction_workflow
* Stop using Delivery Cell on Orders and Internal Packing List (workflows are still a dumb copy of Delivery Cell's and might need to be adapted)
2006-05-10 Jerome
* Added inventory_workflow
* Hide Price & Inventory tabs if no cells on Inventory Line.
* Copy Source from Purchase Trade Condition when applying it
* Set updateAppliedRule on Purchase Line / Cell Edit
* Add Person portal type to source/destination administration/decision

2006-05-03 Romain
* Remove useless field in PurchaseTradeCondition_viewProfile.

2006-04-20 Romain
* Make supply_line_interaction_workflow compatible with Sale/Purchase Supply Line.

2006-03-09 Seb
* Fix parameters in DeliverBuilder_selectConfirmedDeliveryList

2006-03-09 Romain
* Fix history action in Purchase/Sale Supply Cell.

2006-03-08 Romain
* Added Sale Supply Line/Cell, Purchase Supply Line/Cell.
* Use proxy field for Supply.

2006-03-08 Seb
* Added script for selecting deliveries in sale_packing_list_builder

2006-03-03 Seb
* Added Returned Sale Packing List properties

2006-03-03 romain
* add proxy field in internal packing list.

2006-02-28 romain
* add proxy field in purchase trade condition, purchase order, sale packing list, purchase packing list.

2006-02-27 alex